# payment-api

./: .env.example  .gitignore  Cargo.toml  README.md
migrations/: 20260220095636_init.sql
src/: config.rs  errors.rs  main.rs  state.rs
src/db/: payments.rs
src/models/: payment.rs
src/routes/: mod.rs  payments.rs  webhooks.rs
src/services/: mod.rs  payment.rs  webhook.rs
